--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:projektaz.database.windows.net,1433;Database=Projekt;Persist Security Info=False;User ID=Zaliczenie;Password=Pantuniestal1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:passwordmanagerdotnet.database.windows.net,1433;Initial Catalog=passwordManagerDotNet;Persist Security Info=False;User ID=bmusial;Password=bdotnetmanagerPass12373jd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
